[package]
name = "ow_replay_renderer"
version = "0.6.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }
websocket = "0.23.0"
serde_json = "1.0.41"
chrono = "0.4.9"
image = "0.22.3"
imageproc = "0.19.2"
base64 = "0.11.0"
lazy_static = "1.4.0"
ctrlc = "3.1.3"
